# bolt

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  conanfile.py
.github/runners/: .dockerignore  Dockerfile  Dockerfile.ci  Dockerfile.conanserver  docker-compose.yml  runner-base-compose.yml  setup-runners.sh  variables.env
.github/runners/conanserver/: server.conf  start-conan-server.sh
.github/runners/runner/: entrypoint.py
.github/workflows/: build-test.yml  clang-format.yml
bolt/common/base/: Semaphore.h
bolt/common/caching/: AsyncDataCache.h
bolt/common/compression/: Compression.h
bolt/common/config/: Config.cpp
bolt/common/io/: IoStatistics.cpp  IoStatistics.h
bolt/common/memory/: CMakeLists.txt  MemoryAllocationListener.cpp  MemoryAllocationListener.h  MemoryPool.cpp
bolt/common/process/: ExceptionTrace.cpp
bolt/connectors/hive/: CMakeLists.txt  HiveConnectorUtil.cpp  HiveConnectorUtil.h  HiveDataSource.cpp  PaimonConstants.h  PaimonMetadataColumn.cpp  PaimonMetadataColumn.h  PaimonSplitReader.cpp  PaimonSplitReader.h
bolt/core/: Expressions.h
bolt/dwio/common/: FormatData.h  ScanSpec.cpp  ScanSpec.h  SelectiveColumnReader.h  SelectiveStructColumnReader.cpp  SelectiveStructColumnReader.h
bolt/exec/: Driver.h  Expand.cpp  Expand.h  HashAggregation.cpp  HashAggregation.h  LocalPlanner.cpp  MergeJoin.cpp  Operator.cpp  TableScan.cpp
bolt/exec/tests/: CMakeLists.txt  MergeJoinTest.cpp  PrintPlanWithStatsTest.cpp
bolt/expression/signature_parser/: SignatureParser.ll
bolt/expression/tests/: ExprEncodingsTest.cpp  ExprTest.cpp
bolt/expression/type_calculation/: TypeCalculation.ll  TypeCalculation.yy
bolt/functions/lib/: GreenwaldKhanna.h
bolt/functions/prestosql/: FromUtf8.cpp  FromUtf8.h  Zip.cpp
bolt/functions/sparksql/: Arithmetic.h  CMakeLists.txt
bolt/jit/: LRUCache.h  ThrustJIT.h
bolt/jit/tests/: CMakeLists.txt  ThrustJitEngineTest.cpp
bolt/serializers/tests/: PrestoSerializerTest.cpp
bolt/shuffle/sparksql/: BoltRowBasedSortShuffleWriter.cpp  Options.h  ShuffleColumnarToRowConverter.cpp  ShuffleColumnarToRowConverter.h
bolt/shuffle/sparksql/tests/: CMakeLists.txt  LocalFileReaderStreamIterator.h  MemoryReaderStreamIterator.h  MockRssClient.h  ShuffleLargePartitionTest.cpp  ShuffleMatrixTest.cpp  ShuffleMemoryTest.cpp  ShuffleTestBase.cpp  ShuffleTestBase.h
bolt/type/: Subfield.h
bolt/type/filter/: FilterBase.h  (+1 more)
bolt/version/: CMakeLists.txt
scripts/: install-bolt-deps.sh  run-clang-tidy.py  setup-dev-env.sh  util.py
(+78 files in other folders)
